# llm-influencer

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  config.toml  generate.py  pyproject.toml  requirements.txt  ruff.toml
content_generation/: __init__.py  base.py
content_generation/podcast/: __init__.py  generate.py
data/: prep.ipynb
influence/: __main__.py  config.yaml  insta.py  test.ipynb  test.py  utils.py
influence/api/: insta.py  news.py  twitter.py
influence/configs/: storm.yaml
influence/data/: finalq.json
influence/models/: gpt3.py
influence/modules/: base.py  quoter.py  tweet_storm.py
influence/prompts/: image.py  quote.py  storm.py
influencer/agents/state/: __init__.py
influencer/agents/worker/: __init__.py
influencer/agents/worker/podcast_writer/: __init__.py  agent.py
influencer/agents/worker/researcher/: __init__.py  agent.py
influencer/text_to_speech/: __init__.py
utils/: loggerconfig.py  utils.py
